*8336* Fixed stage participants cutoff issue

--- a/plugins/themes/default/index.less
+++ b/plugins/themes/default/index.less
@@ -20,9 +20,7 @@
 }
 
 .pkp_structure_body {
-	border-bottom: 1px dotted #999;
 	margin-bottom: 3px;
-	min-height: 400px;
 }
 
 .pkp_structure_head_localNav {
